@@ -122,6 +122,12 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>${maven-failsafe-plugin}</version>
+                <configuration>
+                    <forkCount>3</forkCount>
+                    <reuseForks>true</reuseForks>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                    <workingDirectory>${project.build.directory}/generated-test-sources/cucumber_${surefire.forkNumber}</workingDirectory>
+                </configuration>
                 <executions>
                     <execution>
                         <goals>
